# expman

./: .gitignore  Makefile  README.md  fault_tolerant_dataloader.py  mypy.ini  pyproject.toml  requirements.txt  run_tests.sh  utils.py
.github/workflows/: main.yml
docs/: gen_references.py  mkdocs.yml
docs/source/: conf.py  index.rst  reference.rst
docs/source/reference/: data.rst  dict_utils.rst  io_utils.rst  logger.rst  metadata.rst  viz.rst
docs/sources/: index.md  pytorch_reference.md
docs/sources/reference/: _fault_tolerant_dataloader.md  _mp_tqdm.md  _mp_wrapper.md  _processing_script.md  adt.md  augmented_pickle.md  config_utils.md  dict_utils.md  gpu_utils.md  logger.md  maybe.md  pipe.md  singleton.md  (+2 more)
examples/ML/: README.md
examples/non-ML/: README.md
expman/: data.py  dict_utils.py  io_utils.py  metadata.py
ml-recipes/: logger.py
notebooks/: sparse_tensor.ipynb  template.ipynb
opskrift/: augmented_pickle.py  dict_utils.py  maybe.py  pipe.py  train_utils.py  viz.py
pytorch-lightning/: model.py
pytorch_lightning/: model.py  run_train.sh  train.py
references/pytorch-lightning/: model.py  train.py
src/: _ADT.py  _argparse.py  _fault_tolerant_dataloader.py  _metadata.py  _mp_wrapper.py  _processing_script.py  adt.py  augmented_pickle.py  config_utils.py  data.py  data_split.py  dict_utils.py  fault_tolerant_dataloader.py  gpu.py  gpu_utils.py  io_utils.py  logger.py  maybe.py  processing_script.py  processing_template.py  singleton.py  train_utils.py  training.py  viz.py
templates/: _processing_script.py  fault_tolerant_dataloader.py  mp_tqdm.py  mp_wrapper.py
tests/: test_augmented_pickle.py  test_dict_utils.py  test_io_utils.py  test_metadata.py  test_pipe.py  test_singleton.py  utils.py
(+8 files in other folders)
