[tool.poetry]
name = "opskrift"
version = "0.1.0"
description = ""
authors = ["Alexandru Dinu <alex.dinu07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
toolz = "^0.12.0"
omegaconf = "^2.2.3"
pandas = "^1.5.1"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.990"
isort = "^5.10.1"
autoflake = "^1.7.7"
hypothesis = "^6.56.4"
pytest = "^7.2.0"
mkdocs = "^1.4.2"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.10"
mkdocstrings-python = "^0.8.0"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
